--- a/.github/workflows/ruby-2.6.yml
+++ b/.github/workflows/ruby-2.6.yml
@@ -19,16 +19,16 @@ jobs:
     - name: Setup Ruby
       uses: actions/setup-ruby@v1
       with:
-        version: 2.6.x
+        ruby-version: 2.6.x
 
     - uses: actions/cache@v1
-      id: bundle-42
+      id: ruby-26-bundle-42
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-${{ hashFiles('hubspot-api-ruby.gemspec') }}-${{ hashFiles('gemfiles/activesupport_4.2.gemfile') }}
 
     - name: Install Dependencies
-      if: steps.bundle-42.outputs.cache-hit != 'true'
+      if: steps.ruby-26-bundle-42.outputs.cache-hit != 'true'
       run: |
         gem install bundler
         bundle install --jobs=3 --retry=3 --path=vendor/bundle
@@ -50,16 +50,16 @@ jobs:
     - name: Setup Ruby
       uses: actions/setup-ruby@v1
       with:
-        version: 2.6.x
+        ruby-version: 2.6.x
 
     - uses: actions/cache@v1
-      id: bundle-50
+      id: ruby-26-bundle-50
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-${{ hashFiles('hubspot-api-ruby.gemspec') }}-${{ hashFiles('gemfiles/activesupport_5.0.gemfile') }}
 
     - name: Install Dependencies
-      if: steps.bundle-50.outputs.cache-hit != 'true'
+      if: steps.ruby-26-bundle-50.outputs.cache-hit != 'true'
       run: |
         gem install bundler
         bundle install --jobs=3 --retry=3 --path=vendor/bundle
@@ -81,16 +81,16 @@ jobs:
     - name: Setup Ruby
       uses: actions/setup-ruby@v1
       with:
-        version: 2.6.x
+        ruby-version: 2.6.x
 
     - uses: actions/cache@v1
-      id: bundle-51
+      id: ruby-26-bundle-51
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-${{ hashFiles('hubspot-api-ruby.gemspec') }}-${{ hashFiles('gemfiles/activesupport_5.1.gemfile') }}
 
     - name: Install Dependencies
-      if: steps.bundle-51.outputs.cache-hit != 'true'
+      if: steps.ruby-26-bundle-51.outputs.cache-hit != 'true'
       run: |
         gem install bundler
         bundle install --jobs=3 --retry=3 --path=vendor/bundle
@@ -112,16 +112,16 @@ jobs:
     - name: Setup Ruby
       uses: actions/setup-ruby@v1
       with:
-        version: 2.6.x
+        ruby-version: 2.6.x
 
     - uses: actions/cache@v1
-      id: bundle-52
+      id: ruby-26-bundle-52
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-${{ hashFiles('hubspot-api-ruby.gemspec') }}-${{ hashFiles('gemfiles/activesupport_5.2.gemfile') }}
 
     - name: Install Dependencies
-      if: steps.bundle-52.outputs.cache-hit != 'true'
+      if: steps.ruby-26-bundle-52.outputs.cache-hit != 'true'
       run: |
         gem install bundler
         bundle install --jobs=3 --retry=3 --path=vendor/bundle
